# Strmlt_Zrdh

./: .gitignore  AGENTS.md  Momentum_board.py  README.md  README_Accordion_Dashboard.md  Zrdh_grid.py  check_momentum_score.py  computRngs.py  feature_testing.py  getHistoricData.py  getHldgBrk.py  getHoldings.py  getInstruDump.py  getPositions.py  hldgs.xlsx  holdings-MX7828.xlsx  indicators.py  kite_analytics.py  kite_auth.py  main.py  momentum_score.py  momentum_tracker.py  portfolio_streamlit.py  portfolio_terminal_component.py  pyproject.toml  quant_calcs.py  sample_holdings.xlsx  setAlerts.py  stock_memory_cards.py  strmlit install and check.txt  task_prompt.txt  top_gainers_losers.py  zrdh_APIdashboard.py  zrdh_accordion_dashboard.py  zrdh_dashboard.py  zrdh_getHistoric.py  zrdh_xldashboard.py
.streamlit/: config.toml
portfolio_terminal/: .gitignore  REACT_TYPESCRIPT_TERMINAL_MIGRATION_GUIDE.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
portfolio_terminal/backend/: README.md  app.py  portfolio_snapshot.py  requirements.txt
portfolio_terminal/notes/: hand off
portfolio_terminal/public/: portfolio_snapshot.json
portfolio_terminal/src/: App.tsx  format.ts  main.tsx  streamlitBridge.ts  styles.css  (+1 more)
proj notes/: MTF.md  Quant Momentum Score System Implementation.docx  advanced phases.txt  calculators  code logic refer.md  hand off  momentum engine  momentum score.txt  phase1.Review.txt  pullback score  requires  requires.md  style guide  top gainers losers
(+16 files in other folders)
