[project]
name = "zrdh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kiteconnect>=5.1.0",
    "matplotlib>=3.10.9",
    "openpyxl>=3.1.5",
    "plotly>=5.24.1",
    "streamlit>=1.56.0",
    "streamlit-autorefresh>=1.0.1",
]
